First commited as before_57347_rev3